--- a/Polyinstrumental-Cacophony.html
+++ b/Polyinstrumental-Cacophony.html
@@ -34,7 +34,7 @@
 					</th>
 					
 					<th>
-						<h2>Average Likes Per Message By Person:</h2>
+						<h2>Like Distribution By Person:</h2>
 						<div id="avgLikesPerMsgByPerson" style="width: 500px; height: 400px;"></div>
 					</th>
 				</tr>
