--- a/Polyinstrumental-Cacophony.html
+++ b/Polyinstrumental-Cacophony.html
@@ -111,7 +111,7 @@
 					<br/>
 					<div id="likesGivenByEmily"></div>
 				</div>
-			<h3><strong>Shannon Symons</strong> (The Disembodied Voice of Satan)</h3>
+			<h3><strong>Shannon Symons</strong> (Disembodied Voice of Satan)</h3>
 				<div class="user-content">
 					<h2>Messages Sent:</h2> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p>4101</p>
 					<br/>
